# div.is

./: .gitignore  App.svelte  Cargo.toml  Config.toml  Dockerfile  Dockerfile.dev  README.md  compose.yml  deploy.yml  deploy_front.yml  dev.env  dev.sh  dev.stack.yml  docker-compose.yml  mem.db  pod.sh  podman.md  prod.sh  prod.stack.yml  stack.yml
.github/workflows/: now.yml  rust.yml
app/: README.md  dev.sh  package-lock.json  package.json
app/public/: global.css
app/services/: Cargo.toml
app/services/src/: main.rs
app/services/src/models/: mod.rs
app/services/src/util/: mod.rs
app/src/: main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: cmd.rs  main.rs
back/: Cargo.toml  Dockerfile  mem.db  mem.db-shm  mem.db-wal
back/schema/: schema.sql
back/sql/: clear.sql  schema.sql
back/src/: main.rs  setup.rs
back/src/api/: auth.rs  mod.rs
back/src/api/handlers/: auth.rs  db.rs  mod.rs  record.rs  user.rs
back/src/api/routes/: auth.rs  mod.rs  record.rs  user.rs
back/src/db/: mod.rs  models.rs
back/src/models/: action.rs  entry.rs  field.rs  group.rs  item.rs  link.rs  mod.rs  record.rs  user.rs
back/tests/req/json/users/: u1.json  u2.json  u3.json
client/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  package-lock.json  package.json  rollup.config.js  server.js
client/public/: __app.html  __index.html  global.css  sw.js  sw.js.map
client/src/: App.svelte  store.js  stores.js
client/static/: __index.html  global.css
common/: Cargo.toml
data/pg/: Dockerfile  pg.dev.env
data/redis/: Dockerfile
pg/: Dockerfile
r/: package-lock.json
scripts/: clean_pod.yml  dep_f.yml  deploy.yml  deploy_back.yml  deploy_db.yml  deploy_front.yml  deploy_gh.yml  deploy_pgadmin.yml  dev.sh  hosts  init.yml  inventory  pg.sh  pod.sh  prod.sh  set_db.yml  setup.yml  sync_back.yml
server/: Cargo.toml  Dockerfile  Dockerfile.dev  mem.db
server/.vim/colors/: pecu_ayu.vim  pecusys_ayu.vim
server/data/pg/: pg.env  pgadmin.env
server/sql/: link_join.sql  schema.sql
server/sql/archived/: clear.sql  schema.sql
server/sql/tables/: users.sql
server/src/: main.rs
server/src/api/: auth.rs
server/src/api/handlers/: auth.rs  mod.rs  record.rs
server/src/api/routes/: db.rs  mod.rs  record.rs  user.rs
server/src/db/: mod.rs  pg.rs  sqlite.rs
server/src/models/: action.rs  entry.rs  field.rs  group.rs  item.rs  link.rs  mod.rs  record.rs  user.rs
server/tests/: auth.rs
sql/: clear.sql  down.sql  schema.sql
sql/archived/: down.sql  schema.sql
sql/tables/: entrytypes.sql  fields.sql  itemfieldlinks.sql  items.sql  recorditemlinks.sql
src/: main.rs  tmp013mj2  tmp3sv69i  tmp7twjso  tmp8b5uvr  tmpg1fczo  tmphnky46  tmpkyyh8w  tmplsic3v  tmpmozvgw  tmpmrwo3f  tmpyo8ijm  tmpz3zr8l
src/api/: mod.rs
src/db/: models.rs  pg.rs  redis.rs  sqlite.rs
src/models/: action.rs  item.rs  record.rs  user.rs
static/: index.html
tests/: .xdp-reg_user_creds.getit.R2H7M0-UIyUZN  .xdp-user_creds_reg.getit.TU4XM0-MXiFEY
vlient/: README.md  package-lock.json  package.json
yew/: Cargo.toml  Dockerfile.dev  package.json
yew/src/: app.rs  lib.rs
yew/static/: styles.scss
yew_cli/src/: app.rs
(+83 files in other folders)
