[package]
name = "div.is"
description = "a programmatic life aggregation, advanced measurement, and insight tool"
version = "0.0.0"
authors = ["ChrisP <chris@div.is>"]
edition = "2018"
license = "MIT"
homepage = "htps://div.is"
documentation = "htps://doc.div.is"
info = "htps://info.div.is"
repository = "https://github.com/pecusys/div.is"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }

[workspace]
members = [
  "server",
  "app",
  "common",
  #"dvgtk",
  #"dvwv",
]
