[package]
name = "mem"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx={version="*", features=["sqlite", "postgres", "chrono", "uuid"]}
warp="*"
tokio={version="*", features=["macros"]}
serde="*"
serde_derive="*"
serde_json="*"
dotenv="*"
