[package]
name = "mem"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx={version="*", features=["sqlite", "postgres", "chrono", "uuid"]}
warp="*"
tokio={version="*", features=["macros"]}
serde={version="*", features=["derive"]}
serde_derive="*"
serde_json="*"
dotenv="*"
jsonwebtoken="*"
argonautica = "*"
oauth2 = { version = "3.0", features = ["futures-03"], default-features = false }
futures = "0.3"
rand = "*"
chrono = "*"
#blake2="*"
#actix_web="*"
#actix_rt="*"
