[package]
name = "divis"
description = "a programmatic life aggregation, advanced measurement, and insight tool"
version = "0.0.0"
authors = ["ChrisP <chris@div.is> <chris.div.is>"]
edition = "2018"
license = "MIT"
homepage = "htps://div.is"
documentation = "htps://doc.div.is"
info = "htps://info.div.is"
repository = "https://github.com/pecusys/div.is"

[dependencies]
sqlx={version="*", features=["sqlite", "json", "chrono", "uuid"]} 
# add postgres when you've figured everything out, remove sqlite
warp="*"
tokio={version="*", features=["macros"]}
serde={version="*", features=["derive"]}
serde_derive="*"
serde_json="*"
dotenv="*"
jsonwebtoken="*"
argonautica = "*"
oauth2 = { version = "3.0", features = ["futures-03"], default-features = false }
futures = "0.3"
chrono = {version="*", features=["serde"]}
redis = "*"
url = "*"
#anyhow="*"
#uuid = {version = "0.6", features = ["serde", "v4"] }
#blake2="*"
#actix_web="*"
#actix_rt="*"
